--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "css": "^2.2.4",
     "date-and-time": "^1.0.0",
     "firebase": "^8.4.2",
+    "npm": "^7.14.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-buttons": "^1.0.0",
     "react-currency-format": "^1.0.0",
     "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^17.0.2",
+    "react-input-number": "^5.0.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
